[package]
name = "dsmr-rs"
version = "0.6.4"
authors = ["Maarten Mulders <mthmulders@noreply.github.com>"]
edition = "2018"
description = "A utility to ship 'smart meter' readings over HTTP"
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Maarten Mulders"
maintainer-scripts = "debian/"
copyright = "2021 - 2024 Maarten Mulders"

[package.metadata.deb.systemd-units]


[dependencies]
config = "0.14.0"
log = "0.4.25"
simplelog = "0.12.2"

[dependencies.serialport]
version = "4.7.0"
default-features = false

[dependencies.reqwest]
version = "0.12.11"
features = [ "blocking" ]

[dependencies.openssl]
version = "0.10.70"
# Build OpenSSL as part of building this crate
features = [ "vendored" ]

# Ensure we select OpenSSL 3.x
[dependencies.openssl-src]
version = "300.4.1+3.1.1"
