[package]
name = "dsmr-rs"
version = "0.6.8"
authors = ["Maarten Mulders <mthmulders@noreply.github.com>"]
edition = "2018"
description = "A utility to ship 'smart meter' readings over HTTP"
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Maarten Mulders"
maintainer-scripts = "debian/"
copyright = "2021 - 2025 Maarten Mulders"

[package.metadata.deb.systemd-units]


[dependencies]
config = "0.14.0"
log = "0.4.27"
simplelog = "0.12.2"

# Manually bump transitive dependency on 'ring' to
# prevent RUSTSEC-2025-0009.
[dependencies.ring]
version = "0.17.12"

[dependencies.serialport]
version = "4.7.2"
default-features = false

[dependencies.reqwest]
version = "0.12.20"
features = [ "blocking" ]

[dependencies.openssl]
version = "0.10.73"
# Build OpenSSL as part of building this crate
features = [ "vendored" ]

# Ensure we select OpenSSL 3.x
[dependencies.openssl-src]
version = "300.5.1+3.1.1"
